--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 	<body>
 		<div id="root"></div>
 
-		<!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
-		<script src="episodes.js"></script>
+		<div id="episode"></div>
 
+		<!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
+		<!--<script src="episodes.js"></script>  -->
+		<script src="shows.js"></script>
 		<!-- Loads YOUR javascript code -->
 		<script src="script.js"></script>
 	</body>
