--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 	</head>
 
 	<body>
+		<!--<button id="refreshButton">Refresh</button>-->
 		<div id="root"></div>
 
 		<div id="episode"></div>
 
 		<!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
 		<!--<script src="episodes.js"></script>  -->
-		<script src="shows.js"></script>
-		<!-- Loads YOUR javascript code -->
-		<script src="script.js"></script>
 	</body>
+	<script src="shows.js"></script>
+	<!-- Loads YOUR javascript code -->
+	<script src="script.js"></script>
+	<!--	<script src="script.js"></script>-->
 </html>
